# AtlasBasedSegmentation

./: CMakeLists.txt  NOTICE  README
Source/: AffineRegistration.cxx  CMakeLists.txt  ConvertFromDICOM.cxx
Testing/: CMakeLists.txt
